# nostd-msvc

./: Cargo.toml  build.rs  readme.md  rust-toolchain
nocrt/: build.rs
nocrt/src/: main.rs
nostd/: Cargo.toml
nostd/src/: main.rs
nostd_novcrt/: build.rs
nostd_novcrt/musl/: float.asm  memcmp.asm  memcpy.asm  readme.md
nostd_novcrt/src/: main.rs
novcrt/: Cargo.toml
novcrt/musl/: memmove.asm  memset.asm  probe_stack.asm
novcrt/musl/lib/: mem.lib
novcrt/src/: main.rs
src/: main.rs
