[package]
name = "nostd"
version = "0.1.0"
edition = "2021"

[dependencies.windows-sys]
version = "0.36.1"
features = [
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
	"Win32_System_Threading",
	"Win32_System_Console"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

