[package]
name = "nostd_novcrt"
version = "0.1.0"
edition = "2021"

[dependencies.windows-sys]
version = "0.36.1"
features = [
	"Win32_Foundation",
	"Win32_Storage_FileSystem",
	"Win32_System_IO",
	"Win32_System_Threading",
	"Win32_System_Console"
]

#[dependencies.compiler_builtins]
#version = "0.1.79"
#default-features = false
#features = ["mem", "no-lang-items"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
